--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs += [
+                '-Xjvm-default=enable' // Inheritance from an interface with '@JvmDefault' members is only allowed with -Xjvm-default option
+        ]
     }
     buildFeatures {
         viewBinding true // view binding enabled
